Booking and Manage Views Updates

--- a/Views/Booking/RideHistory.cshtml
+++ b/Views/Booking/RideHistory.cshtml
@@ -45,7 +45,7 @@
                 const bookingId = $(this).data('id');
                 const booking = DataService.getBookingById(bookingId);
                 localStorage.setItem('currentBooking', JSON.stringify(booking));
-                window.location.href = '@Url.Action("ConfirmedBooking", "Booking")';
+                window.location.href = '@Url.Action("ConfirmBooking", "Booking")';
             });
         });
     </script>
