--- a/Views/Booking/ConfirmBooking.cshtml
+++ b/Views/Booking/ConfirmBooking.cshtml
@@ -5,7 +5,7 @@
 <h2>Booking Confirmed</h2>
 
 <div id="bookingDetails" class="container">
-    <!-- Details populated by JavaScript -->
+    <!-- Details will be populated by JavaScript -->
 </div>
 
 @section scripts {
@@ -13,41 +13,47 @@
         $(document).ready(function () {
             const booking = JSON.parse(localStorage.getItem('currentBooking'));
             if (booking) {
-                const driver = booking.driverDetails || {};
-                const vehicle = booking.vehicleDetails || {};
-
                 const html = `
-                            <div class="card">
-                                <div class="card-header">
-                                    <h5>Booking Details</h5>
+                    <div class="card">
+                        <div class="card-header">
+                            <h5>Booking Details</h5>
+                        </div>
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <p><strong>Booking ID:</strong> ${booking.bookingID}</p>
+                                    <p><strong>Date Booked:</strong> ${new Date(booking.bookingDate).toLocaleString()}</p>
+                                    <p><strong>Service Type:</strong> ${booking.serviceType}</p>
+                                    <p><strong>Pick-Up Time:</strong> ${booking.bookingPickUp}</p>
+                                    <p><strong>Reason:</strong> ${booking.bookingReason}</p>
+                                    <p><strong>Address:</strong> ${booking.bookingPickupAddress}</p>
                                 </div>
-                                <div class="card-body">
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            <p><strong>Booking ID:</strong> ${booking.bookingID}</p>
-                                            <p><strong>Date Booked:</strong> ${new Date(booking.bookingDate).toLocaleDateString()}</p>
-                                            <p><strong>Pick-Up Time:</strong> ${booking.bookingPickUp}</p>
-                                            <p><strong>Pick-Up Address:</strong> ${booking.bookingPickupAddress}</p>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <h5>Driver Details</h5>
-                                            <img src="/Content/images/${driver.driverImage || 'default-driver.png'}" class="img-thumbnail" width="100" />
-                                            <p>${driver.driverFirstName} ${driver.driverLastName}</p>
-                                            <p>${driver.driverPhoneNumber}</p>
+                                <div class="col-md-6">
+                                    <h5>Driver Details</h5>
+                                    <p><strong>Name:</strong> ${booking.driverDetails.driverFirstName} ${booking.driverDetails.driverLastName}</p>
+                                    <p><strong>Phone:</strong> ${booking.driverDetails.driverPhoneNumber}</p>
+                                    <p><strong>Service:</strong> ${booking.driverDetails.driverServiceType}</p>
 
-                                            <h5 class="mt-3">Ambulance Details</h5>
-                                            <img src="/Content/images/${vehicle.vehicleImage || 'default-vehicle.png'}" class="img-thumbnail" width="100" />
-                                            <p>${vehicle.vehicleType}</p>
-                                            <p>${vehicle.vehicleRegistration}</p>
-                                        </div>
-                                    </div>
+                                    <h5 class="mt-3">Vehicle Details</h5>
+                                    <p><strong>Type:</strong> ${booking.vehicleDetails.vehicleType}</p>
+                                    <p><strong>Registration:</strong> ${booking.vehicleDetails.vehicleRegistration}</p>
+                                    <p><strong>Service:</strong> ${booking.vehicleDetails.vehicleServiceType}</p>
                                 </div>
                             </div>
-                        `;
-
+                        </div>
+                        <div class="card-footer">
+                            <a href="@Url.Action("HomePage", "Booking")" class="btn btn-primary">Return Home</a>
+                        </div>
+                    </div>
+                `;
                 $('#bookingDetails').html(html);
             } else {
-                $('#bookingDetails').html('<p>No booking information found.</p>');
+                $('#bookingDetails').html(`
+                    <div class="alert alert-warning">
+                        No booking information found.
+                        <a href="@Url.Action("SelectService", "Booking")" class="alert-link">Create a new booking</a>
+                    </div>
+                `);
             }
         });
     </script>
