--- a/Views/Booking/ConfirmBooking.cshtml
+++ b/Views/Booking/ConfirmBooking.cshtml
@@ -5,48 +5,64 @@
 <h2>Booking Confirmed</h2>
 
 <div id="bookingDetails" class="container">
-    <!-- Details will be populated by JavaScript -->
+    <div class="card">
+        <div class="card-header">
+            <h5>Booking Details</h5>
+        </div>
+        <div class="card-body">
+            <div class="row">
+                <div class="col-md-6">
+                    <p><strong>Booking ID:</strong> <span id="bookingId"></span></p>
+                    <p><strong>Date Booked:</strong> <span id="bookingDate"></span></p>
+                    <p><strong>Service Type:</strong> <span id="serviceType"></span></p>
+                    <p><strong>Pick-Up Time:</strong> <span id="pickUpTime"></span></p>
+                    <p><strong>Reason:</strong> <span id="reason"></span></p>
+                    <p><strong>Address:</strong> <span id="address"></span></p>
+                </div>
+                <div class="col-md-6">
+                    <h5>Driver Details</h5>
+                    <p><strong>Name:</strong> <span id="driverName"></span></p>
+                    <p><strong>Phone:</strong> <span id="driverPhone"></span></p>
+                    <p><strong>Service:</strong> <span id="driverService"></span></p>
+
+                    <h5 class="mt-3">Vehicle Details</h5>
+                    <p><strong>Type:</strong> <span id="vehicleType"></span></p>
+                    <p><strong>Registration:</strong> <span id="vehicleReg"></span></p>
+                    <p><strong>Service:</strong> <span id="vehicleService"></span></p>
+                </div>
+            </div>
+        </div>
+        <div class="card-footer">
+            <a href="@Url.Action("HomePage", "Booking")" class="btn btn-primary">Return Home</a>
+        </div>
+    </div>
 </div>
 
 @section scripts {
     <script>
         $(document).ready(function () {
-            const booking = JSON.parse(localStorage.getItem('currentBooking'));
-            if (booking) {
-                const html = `
-                    <div class="card">
-                        <div class="card-header">
-                            <h5>Booking Details</h5>
-                        </div>
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <p><strong>Booking ID:</strong> ${booking.bookingID}</p>
-                                    <p><strong>Date Booked:</strong> ${new Date(booking.bookingDate).toLocaleString()}</p>
-                                    <p><strong>Service Type:</strong> ${booking.serviceType}</p>
-                                    <p><strong>Pick-Up Time:</strong> ${booking.bookingPickUp}</p>
-                                    <p><strong>Reason:</strong> ${booking.bookingReason}</p>
-                                    <p><strong>Address:</strong> ${booking.bookingPickupAddress}</p>
-                                </div>
-                                <div class="col-md-6">
-                                    <h5>Driver Details</h5>
-                                    <p><strong>Name:</strong> ${booking.driverDetails.driverFirstName} ${booking.driverDetails.driverLastName}</p>
-                                    <p><strong>Phone:</strong> ${booking.driverDetails.driverPhoneNumber}</p>
-                                    <p><strong>Service:</strong> ${booking.driverDetails.driverServiceType}</p>
+            const bookingKey = localStorage.getItem('currentBookingKey');
+            if (bookingKey) {
+                // Retrieve all booking data from localStorage
+                $('#bookingId').text(localStorage.getItem(bookingKey + '_id'));
+                $('#serviceType').text(localStorage.getItem(bookingKey + '_serviceType'));
+                $('#bookingDate').text(new Date(localStorage.getItem(bookingKey + '_date')).toLocaleString());
+                $('#pickUpTime').text(localStorage.getItem(bookingKey + '_pickUpTime'));
+                $('#reason').text(localStorage.getItem(bookingKey + '_reason'));
+                $('#address').text(localStorage.getItem(bookingKey + '_address'));
 
-                                    <h5 class="mt-3">Vehicle Details</h5>
-                                    <p><strong>Type:</strong> ${booking.vehicleDetails.vehicleType}</p>
-                                    <p><strong>Registration:</strong> ${booking.vehicleDetails.vehicleRegistration}</p>
-                                    <p><strong>Service:</strong> ${booking.vehicleDetails.vehicleServiceType}</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card-footer">
-                            <a href="@Url.Action("HomePage", "Booking")" class="btn btn-primary">Return Home</a>
-                        </div>
-                    </div>
-                `;
-                $('#bookingDetails').html(html);
+                // Driver details
+                $('#driverName').text(
+                    localStorage.getItem(bookingKey + '_driverFirstName') + ' ' +
+                    localStorage.getItem(bookingKey + '_driverLastName')
+                );
+                $('#driverPhone').text(localStorage.getItem(bookingKey + '_driverPhone'));
+                $('#driverService').text(localStorage.getItem(bookingKey + '_driverService'));
+
+                // Vehicle details
+                $('#vehicleType').text(localStorage.getItem(bookingKey + '_vehicleType'));
+                $('#vehicleReg').text(localStorage.getItem(bookingKey + '_vehicleReg'));
+                $('#vehicleService').text(localStorage.getItem(bookingKey + '_vehicleService'));
             } else {
                 $('#bookingDetails').html(`
                     <div class="alert alert-warning">
